# onstats

./: .coverage  .pre-commit-config.yaml  README.md  coverage.xml  pyproject.toml
.github/workflows/: pipe.yml
onstats/: a_iter_stats.py  a_timed_stats.py  ge.py  iter_stats.py  lgen.py  stats.py  stats_alt.py  timed_stats.py  util.py
reports/coverage/: coverage.xml
reports/junit/: junit.xml  report.html
src/onstats/: util.py
stats/: generator_extensions.py  send_operators.py  stats.py
tests/: test_send_operators.py  test_stats.py  test_stats_alt.py
