[tool.poetry]
name = "OnStats"
version = "1.0.0"
description = "Online stats in python, based in generators with send"
authors = ["<pablo.r.c@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^=3.8"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"
black = "^24.2.0"
pytest-cov = "^4.1.0"
