[tool.poetry]
name = "onstats"
version = "0.9.0"
description = "Online stats in python, based in generators with send"
authors = ["<pablo.r.c@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
genbadge = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"
black = "^24.2.0"
pytest-cov = "^5.0.0"
pandas = "^2.2.2"
mypy = "^1.10.0"
genbadge = {extras = ["all"], version = "^1.1.1"}
pytest-html = "^4.1.1"


[tool.pytest.ini_options]
addopts = ["--import-mode=importlib",
     "--cov=src",
     "--junitxml=reports/junit/junit.xml",
    "--html=reports/junit/report.html"]
minversion = 7.0
pythonpath = 'src'
testpaths =['tests']


[tool.mypy]
exclude = [
    '^onstats/tests/.',
]
ignore_missing_imports = true